# attention_k

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
configs/: stage0.yaml  v0_nli_small.yaml
docs/: codex_tasks.md  experiment_guide.md  label_schema.md  method.md  prompts.md
scripts/: 00_smoke_test.py  01_prepare_data.py  02_extract_candidate_spans.py  03_build_ablation_units.py  04_build_ablated_questions.py  05_run_nli_scoring.py  06_build_semantic_labels.py  07_build_masked_questions.py  08_run_recovery.py  09_score_recovery.py  10_build_unit_evidence.py  11_build_attention_anchor_labels.py  12_build_intervention_manifest.py  13_rebuild_downstream_real_signals.py  14_rebuild_downstream_upgraded_recovery_scoring.py  15_consolidate_human_review.py  16_cache_hidden_states.py  17_extract_representation_features.py  18_build_probe_dataset.py  19_train_probe_baseline.py  20_build_guidance_candidate_manifest.py  21_write_sprint_2_closed_loop_report.py  22_write_sprint_2_stage_summary.py  23a_audit_dataset_sources.py  23b_import_reasoning_dataset.py  24_build_full_scale_manifest.py  25_build_full_scale_weak_labels.py  26_build_full_scale_weak_probe_dataset.py  27_write_full_scale_2000_summary.py  run_stage0_analysis.py  run_stage0_generation.py  run_stage0_preflight.py  sprint_2H_audit_risk_positive.py  sprint_2H_feature_enrichment.py  sprint_2H_instance_signal.py  sprint_2H_ordinal_calibration.py  sprint_2I_R_score_matrix_audit.py  sprint_2I_attention_cache.py  sprint_2I_attention_probe.py  sprint_2J_fix_2K_scoring.py  (+27 more)
(+250 files in other folders)
